fix: message format

--- a/action.yml
+++ b/action.yml
@@ -20,8 +20,11 @@ inputs:
   message_id:
     description: 'The ID of the existing Slack message to update.'
     required: false
-  tag:
-    description: 'Tag of the Docker image being deployed.'
+  ref:
+    description: 'Ref is being deployed.'
+    required: true
+  environment:
+    description: 'Environment deploying to.'
     required: true
   project_name:
     description: 'Override the project name.'
