--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "ncc build index.js",
+    "build": "NODE_OPTIONS=\"--openssl-legacy-provider\" ncc build index.js",
     "test": "jest"
   },
   "dependencies": {
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
-    "@zeit/ncc": "^0.20.5",
+    "@vercel/ncc": "^0.38.0",
     "babel-jest": "^24.9.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
